# fwupd

./: meson_options.txt
.github/workflows/: codeql-analysis.yml  create_containers.yml  freebsd.yml  main.yml
contrib/: fwupd.spec.in  reformat-code.py  setup
contrib/ci/: Dockerfile-debian.in  build_windows.sh  dependencies.xml
contrib/freebsd/: Makefile
contrib/snap/: fwupd-command  snapcraft-master.yaml
contrib/snap/fix-bash-completion/: Makefile
libfwupd/: fwupd-remote.c
libfwupdplugin/: fu-device.c  fu-device.h  fu-self-test.c
plugins/: meson.build
plugins/cros-ec/: fu-cros-ec-usb-device.c
plugins/dell-dock/: dell-dock.quirk  fu-dell-dock-common.c  fu-dell-dock-common.h  fu-dell-dock-usb-usb4.c  fu-plugin-dell-dock.c
plugins/dfu/: dfu.quirk
plugins/famaf/: fu-plugin-famaf.c  meson.build
plugins/jabra/: fu-plugin-jabra.c
plugins/kinetic-dp/: fu-kinetic-dp-aux-dpcd.h  fu-kinetic-dp-aux-isp.c  fu-kinetic-dp-aux-isp.h  fu-kinetic-dp-common.h  fu-kinetic-dp-connection.c  fu-kinetic-dp-device.c  fu-kinetic-dp-device.h  fu-kinetic-dp-firmware.c  fu-kinetic-dp-firmware.h  fu-kinetic-dp-secure-aux-isp.c  fu-kinetic-dp-secure-aux-isp.h  fu-plugin-kinetic-dp.c
plugins/test/: fu-plugin-test.c
plugins/test/example/: build.sh  firmware.metainfo.xml
plugins/thunderbolt/: fu-thunderbolt-device.c
plugins/vli/: fu-vli-usbhub-device.c  fu-vli-usbhub-firmware.c
snap/: snapcraft.yaml
